# kitchen-manager

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml  services.py
handlers/: __init__.py  clarification.py  correction.py  inventory.py  meta.py  planner.py  query.py  rate_limiter.py  receipt.py  reconciler.py  stubs.py
llm/: client.py
models/: __init__.py  bot_response.py  correction.py  feedback.py  intent.py  inventory.py  planner.py
prompts/: correction_parser.md  feedback_parser.md  intent_classifier.md  inventory_parser.md  planner.md  query_responder.md  receipt_parser.md
routers/: intent_router.py
scripts/: seed_canonical_items.py
specs/: execution_plan.md  intent_classifier_schema.json  kitchen_agent_telegram_build_spec_v2.md  phase2_plan.md  telegram_bot_response_schema_v1.json  telegram_feedback_parser_schema_v1.json  telegram_inventory_parser_schema_v2.json  telegram_planner_schema_v2.json  telegram_planning_context_schema_v1.json
storage/: sheets.py  sqlite.py
tests/: conftest.py  test_clarification_handler.py  test_correction_handler.py  test_integration.py  test_inventory_handler.py  test_meta_handler.py  test_models.py  test_planner_handler.py  test_query_handler.py  test_rate_limiter.py  test_receipt_handler.py  test_reconciler.py  test_router.py  test_sheets.py  test_storage.py  test_webhook.py
tests/fixtures/: messages.jsonl
