[project]
name = "kitchen-manager"
version = "0.1.0"
description = "Family kitchen assistant Telegram bot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-telegram-bot>=21.0",
    "anthropic>=0.40.0",
    "gspread>=6.0.0",
    "rapidfuzz>=3.0.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: hits real Claude API and Google Sheets (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
